<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/clear_top"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:background="@color/clear_title"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:src="@drawable/icon_title_select" />

            <TextView
                android:id="@+id/top_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:gravity="center_horizontal"
                android:text="@string/exported_but_nocleaned"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_delete_message"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/exported_loacation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/clear_tip"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <com.clean.space.ui.HandleProgressBar
        android:id="@+id/clear_progress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/clear_top"
        android:background="@color/clear_message"
        android:gravity="center_vertical" />

    <RelativeLayout
        android:id="@+id/clear_options"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/clear_progress"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/select_all"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:src="@drawable/btn_not_check" />

        <TextView
            android:id="@+id/select_all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/select_all"
            android:text="@string/clear_check_text"
            android:textColor="@color/clear_operations"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="13.5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/sort_list_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_sort_down" />

            <TextView
                android:id="@+id/sort_selected_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:maxWidth="150dp"
                android:text="@string/clear_sort_item1"
                android:textColor="@color/clear_operations"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/sperator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/clear_options"
        android:background="?android:attr/listDivider" />

    <!-- bottom button -->

    <RelativeLayout
        android:id="@+id/clear_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="47.5dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_delete_select"
            android:gravity="center"
            android:text="@string/clear_delete_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="47.5dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_back_select"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="47.5dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_delete_select"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- gridview for pictures -->

    <LinearLayout
        android:id="@+id/clear_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/clear_action_button"
        android:layout_below="@id/sperator"
        android:background="@color/clear_content"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp" />
    </LinearLayout>

    <!-- sort menu options -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25.5dp"
        android:layout_marginTop="178dp" >

        <LinearLayout
            android:id="@+id/sort_options"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sort_list_shape"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/sort_option1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/sort_option_select"
                android:gravity="center"
                android:text="@string/clear_sort_item1"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/sort_option2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/sort_option_select"
                android:gravity="center"
                android:text="@string/clear_sort_item2"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/sort_option3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/sort_option_select"
                android:gravity="center"
                android:text="@string/clear_sort_item3"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/sort_option4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/sort_option_select"
                android:gravity="center"
                android:text="@string/clear_sort_item4"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/show_big_photo_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clear_big_photo"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/show_big_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>