<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/alert_delete_title"
            android:textColor="@color/alert_delete_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/alert_delete_message"
            android:textColor="@color/alert_delete_message"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/alert_delete_location"
            android:textSize="12sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/goon_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="@drawable/btn_delete_select"
                android:gravity="center"
                android:text="@string/continue_delete"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="@drawable/btn_back_select"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>